# Pyke

./: .gitignore  CMakeLists.txt  readme.md  sample_viewer.cpp  setup_vkviewer.py
src/: Defines.h  Vk_ColorOp.h  Vk_ColorOp.hpp  Vk_Coloring.hpp  Vk_Function.h  Vk_Lib.hpp  Vk_Logger.h  Vk_Logger.hpp  Vk_SampleObjects.h  Vk_SampleObjects.hpp  Vk_ThreadPool.h  Vk_ThreadPool.hpp  Vk_Viewer.h  Vk_Viewer.hpp  Vk_Viewer.md  pyexp_vkviewer.cpp
src/application/: Vk_Device.h  Vk_Device.hpp  Vk_DeviceLib.hpp  Vk_DeviceQueue.hpp  Vk_Initializers.hpp  Vk_Instance.h  Vk_Instance.hpp  Vk_Samplingresolution.h  Vk_Samplingresolution.hpp  Vk_Surface.h  Vk_Surface.hpp
src/buffers/: Vk_DataBuffer.h  Vk_DataBuffer.hpp  Vk_DataBufferLib.hpp  Vk_DataBufferUtilities2.h  Vk_DataBufferUtilities2.hpp  Vk_TextureBuffer.h  Vk_TextureBuffer.hpp  Vk_UniformBuffer.h  Vk_UniformBuffer.hpp  lol.hpp
src/camera/: I_Layout.h  I_Layout.hpp  I_ViewerSteering.hpp  Vk_Camera.h  Vk_Camera.hpp  Vk_GridLayout.h  Vk_GridLayout.hpp  Vk_ViewerSteeringLib.h  Vk_ViewerSteeringLib.hpp  Vk_ViewerSteering_CameraCentric.h  Vk_ViewerSteering_CameraCentric.hpp  Vk_ViewerSteering_ObjectCentric.h  Vk_ViewerSteering_ObjectCentric.hpp
src/lwws_win/: main.cpp
src/lwws_win/include/: lwws_viewport.hpp  lwws_window.hpp  lwws_window_x11.hpp
src/objects/: !!!OBSERVE_NAMING_CONVENTIONS!!!  I_Object.h  I_Object.hpp  Vk_ObjectLib.hpp  Vk_ObjectType.h  Vk_Renderable.h  Vk_Renderable.hpp  Vk_RenderableTypeCaster.hpp  Vk_Shader.h  Vk_Shader.hpp  Vk_ShaderBin  Vk_Structures.h  Vk_Structures.hpp  compile_glsl2.py
src/objects/_shaderprograms/: s_line.vert  s_triangle_phong.frag  s_triangle_phong.vert
src/objects/dot/: S_Dot_P_C.h  S_Dot_P_C.hpp  Vk_Dot.h  Vk_Dot.hpp  s_dot_pc.frag  s_dot_pc.vert
src/objects/line/: S_Line_P_C.h  S_Line_P_C.hpp  Vk_Line.h  Vk_Line.hpp  s_line_p_c.vert
src/objects/mesh/: S_Mesh_P_C.h  S_Mesh_P_C.hpp  Vk_Mesh.h  Vk_Mesh.hpp  s_mesh_p_c.vert
src/renderer/: I_FrameBuffer.hpp  I_GraphicsPipeline.h  I_GraphicsPipeline.hpp  I_GraphicsPipelineConfig.h  I_RenderPass.h  I_RenderPass.hpp  I_Renderer.h  I_Renderer.hpp  I_Swapchain.h  Vk_RendererLib.hpp
src/renderer/rasterizer/immediate_mode/: Vk_Framebuffer_IM.h  Vk_Framebuffer_IM.hpp  Vk_Graphicspipeline_IM.h  Vk_Graphicspipeline_IM.hpp  Vk_Rasterizer_IM.h  Vk_Rasterizer_IM.hpp  Vk_RenderPass_IM.h  Vk_RenderPass_IM.hpp  Vk_Swapchain_IM.h  Vk_Swapchain_IM.hpp
test_py/: _test_data.py  test_vkviewer.py
tests/: test_data.h  test_data.hpp  test_terminal_colors.cpp  test_transformations.cpp  test_utilities.h  test_utilities.hpp  test_vk4_all.cpp  test_vk4_application.cpp  test_vk4_buffer_update_strategies.cpp  test_vk4_camera.cpp  test_vk4_components.cpp  test_vk4_data_buffers.cpp  test_vk4_device_queue.cpp  test_vk4_shaders.cpp  test_vk4_uniform_buffers.cpp
